# lib2ddoc

./: Cargo.toml
src/: lib.rs  lib_c.rs
src/document/: mod.rs  raw.rs  signing.rs  validity.rs
src/document/decoded/: mod.rs
src/document/decoded/field_zone/: mod.rs
src/libdmtx/: libdmtx_sys.rs  mod.rs
src/security/: check_signature_http.rs
src/serialize/: json.rs
src/specifications/document/: document_specification.rs
src/specifications/field/: field_specification.rs  field_validation_functions.rs
tests/: integration.rs
tests/decoder/: jpeg.rs
